# SlobDict

./: .gitignore  README.md  dev.muntashir.SlobDictGTK.yaml  flatpak_build_release.sh  flatpak_run_local.sh  gen_py_modules.py  meson.build  meson_run_local.sh  mypy.ini  python3-modules.json  requirements.txt
data/: meson.build  slobdict.desktop.in  slobdict.gresource.xml.in  slobdict.gschema.xml.in  slobdict.metainfo.xml.in  slobdict.search-provider.ini.in  slobdict.service.in
data/icons/: meson.build
data/ui/: shortcuts.blp  window.blp
gnome-extension/slobdict@muntashir.dev/: .gitignore  extension.js  install.sh  metadata.json  pack.sh
gnome-extension/slobdict@muntashir.dev/schemas/: org.gnome.shell.extensions.slobdict.gschema.xml
po/: POTFILES  meson.build  slobdict.pot
scripts/: README.md  flatpak_build_release.sh  flatpak_run_local.sh  gen_pyglossary_supported_input_types.py  meson_run_local.sh  update_translation.sh
slobdict/: app.py  constants.py.in  main.py  meson.build  search_provider.py  slobdict.in
slobdict/backend/: bookmarks_db.py  dictionary_catalog_manager.py  dictionary_manager.py  history_db.py  http_server.py  settings_manager.py  slob.py  slob_client.py  slob_wrapper.py
slobdict/ui/: dictionaries_dialog.py  main_window.py  preferences_dialog.py  style.css
slobdict/utils/: dark-mode.css  i18n.py  intro.html  slob_tags.py  structs.py  utils.py
