install_data(
  '@0@.svg'.format(APPLICATION_ID),
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps'
)

install_data(
  '512x512/@0@.png'.format(APPLICATION_ID),
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / '512x512' / 'apps'
)

install_data(
  '256x256/@0@.png'.format(APPLICATION_ID),
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / '256x256' / 'apps'
)

install_data(
  '128x128/@0@.png'.format(APPLICATION_ID),
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / '128x128' / 'apps'
)